kubernetes/apps/game-thumbs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-thumbs
spec:
  selector:
    app: game-thumbs
  ports:
    - port: 3000
      targetPort: http
      name: http
