kubernetes/apps/game-thumbs/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: game-thumbs
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`game-thumbs.mpdavis.com`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: game-thumbs
          port: 3000
  tls: {}
